# DiPOSH

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  config.h.in  configure  configure.ac
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: README.md  collective_communications.md  communication_drivers.md  ft_cl.md  rte.md
example/: bench_putget.c
m4/: acx_mpi.m4  ax_dmtcp.m4  ax_mpi.m4
publications/: README.md
publications/CC-PE_2020/: 2048.gpt  8192.gpt  README.md  hub_bw.gpt  hub_latency.gpt  mpi_ib_bw.gpt  mpi_ib_latency.gpt  mpi_sm_bw.gpt  mpi_sm_latency.gpt  sm_bw.gpt  sm_latency.gpt
publications/CC-PE_2020/communication/: dahu_gaspi_ib_get.gpt  dahu_gaspi_sm_get.gpt  dahu_mpi_mapbycore_bandwidth.gpt  dahu_mpi_mapbycore_latency.gpt  dahu_mpi_mapbynode_bandwidth.gpt  dahu_mpi_mapbynode_latency.gpt  dahu_mpi_mapbysocket_bandwidth.gpt  dahu_mpi_mapbysocket_latency.gpt  dahu_sm_mapbycore_bandwidth.gpt  dahu_sm_mapbycore_latency.gpt  dahu_sm_mapbysocket_bandwidth.gpt  dahu_sm_mapbysocket_latency.gpt
src/: Makefile  Makefile.am  Makefile.in  Makefile.manual  ked_tcp.cpp  ked_tcp.h  perf.cpp  perf.h  posh_chandylamport.cpp  posh_checkpointing.cpp  posh_checkpointing.h  posh_coll_binomial.cpp  posh_coll_binomial.tpp  posh_coll_flat.cpp  posh_coll_flat.h  posh_coll_flat.tpp  posh_coll_gaspi.cpp  posh_coll_gaspi.h  posh_coll_mpi.cpp  posh_coll_mpi.h  posh_collectives.cpp  posh_collectives.h  posh_collectives.tpp  posh_communication.h  posh_contactinfo.h  posh_endpoint.h  posh_ft_coordinator.cpp  posh_gaspi.cpp  posh_gaspi.h  posh_heap.cpp  posh_heap.h  posh_hub.cpp  posh_hub.h  posh_knem.cpp  posh_knem.h  posh_launcher.h  posh_launcher_gaspi.cpp  posh_launcher_gaspi.h  posh_launcher_mpi.cpp  posh_launcher_mpi.h  (+66 more)
src/hub_mpi/: Makefile.am  Makefile.in  hub_mpi.cpp
src/prog/: Makefile.in  accessible_ping.c  atomic_inc.c  bcast.c  bcast_flood.c  bench_get.c  bench_putget.c  circular_shift.c  cswap.c  exemple_mini.c  get1.c  get_g.c  hello.c  iput128.c  iput32.c  ping.c  progTest.sh  put1.c  swap1.c  test_barrier.c  test_shmem.c
