#
#
# Copyright (c) 2020 LIPN - Universite Paris 13
#                         - Universite Sorbonne Paris Nord
#                    All rights reserved.
#
# This file is part of POSH.
# 
# POSH is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# POSH is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with POSH.  If not, see <http://www.gnu.org/licenses/>.
#
#

#################################################################################
# Sources
#################################################################################

hub_mpi_SOURCES = hub_mpi.cpp

bin_PROGRAMS = hub-mpi

ACLOCAL_AMFLAGS=-I ../../config 
